--- a/ICP 4/Source/PYTHON ICP 4.ipynb
+++ b/ICP 4/Source/PYTHON ICP 4.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Sex  Survived\n",
-      "0  female  0.742038\n",
-      "1    male  0.188908\n"
+      "Empty DataFrame\n",
+      "Columns: [Survived, Pclass, Sex, Age, Fare, Embarked]\n",
+      "Index: []\n",
+      "   Survived       Sex\n",
+      "1         1  0.681287\n",
+      "0         0  0.147541\n"
      ]
     }
    ],
@@ -21,11 +24,17 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "\n",
-    "train_df = pd.read_csv('./train.csv')\n",
-    "test_df = pd.read_csv('./test.csv')\n",
-    "combine = [train_df, test_df]\n",
+    "train_df = pd.read_csv('./train_preprocessed.csv')\n",
+    "test_df = pd.read_csv('./test_preprocessed.csv')\n",
+    "X_train = train_df.drop(\"Survived\",axis=1)\n",
+    "Y_train = train_df[\"Survived\"]\n",
+    "X_test = test_df.drop(\"PassengerId\",axis=1).copy()\n",
+    "print(train_df[train_df.isnull().any(axis=1)])\n",
+    "svc = SVC()\n",
+    "svc.fit(X_train, Y_train)\n",
+    "Y_pred = svc.predict(X_test)\n",
     "\n",
-    "print(train_df[[\"Sex\", \"Survived\"]].groupby(['Sex'], as_index=False).mean().sort_values(by='Survived', ascending=False))"
+    "print(train_df[['Survived', 'Sex']].groupby(['Survived'], as_index=False).mean().sort_values(by='Sex', ascending=False))"
    ]
   },
   {
